--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <div class="swiper-wrapper">
                   <!-- Slides -->
                   <div class="swiper-slide main__bg1"></div>
-                  <div class="swiper-slide main__bg2"></div>
-                  <div class="swiper-slide main__bg3"></div>
+                  <div class="swiper-slide main__bg2 lazyload" data-src="img/main-img.webp"></div>
+                  <div class="swiper-slide main__bg3 lazyload" data-src="img/main-back2.webp"></div>
                 </div>
                 <!-- If we need pagination -->
                 <div class="swiper-pagination" aria-hidden="true"></div>
@@ -124,7 +124,7 @@
 
                 <div class="about__dwn">
                     <div class="about__left">
-                      <div class="about__img"></div>
+                      <div class="about__img lazyload" data-src="img/about-img.webp"></div>
                         <div class="about__img-desc">
                             <p class="about__img-p">Принимая во внимание показатели успешности, перспективное планирование способствует подготовке и реализации новых принципов.</p>
                             <a href="#" class="about__link">Подробнее</a>
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hww__show hww__show-2" data-target="two">
+                <div class="hww__show hww__show-2 lazyload" data-src="img/hww-img2.webp" data-target="two">
                   <div class="hww__step step-1 ">
                       <h3 class="hww__desc-heading">Составляем смету</h3>
                       <p class="hww__desc">
@@ -180,7 +180,7 @@
                       </p>
                   </div>
                 </div>
-                <div class="hww__show hww__show-3" data-target="three">
+                <div class="hww__show hww__show-3 lazyload" data-src="img/hww-img3.webp" data-target="three">
                   <div class="hww__step step-1 ">
                       <h3 class="hww__desc-heading">Привлекаем подрядчиков</h3>
                       <p class="hww__desc">
@@ -188,7 +188,7 @@
                       </p>
                   </div>
                 </div>
-                <div class="hww__show hww__show-4" data-target="four">
+                <div class="hww__show hww__show-4 lazyload" data-src="img/hww-img4.webp" data-target="four">
                   <div class="hww__step step-1 ">
                       <h3 class="hww__desc-heading">Инспектируем все этапы работ</h3>
                       <p class="hww__desc">
