--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="preload" href="fonts/montserrat-v15-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/montserrat-v15-latin_cyrillic-600.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/montserrat-v15-latin_cyrillic-700.woff2" as="font" type="font/woff2" crossorigin>
-    <script defer src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<!--     <script defer src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 
 
     <!-- lazyload -->
